Fix: Removed right padding in media page and cast sections to align the cards better

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -2016,6 +2016,11 @@ div[data-role=controlgroup] a.ui-btn-active {
     padding-right: 5% !important;
 }
 
+/* this removes right padding from cast page sections to cards evenly*/
+#itemDetailPage .verticalSection .itemsContainer.padded-right {
+    padding-right: 0 !important;
+}
+
 .paging {
     padding-inline: 1em;
 }
